# turtlebot

./: .gitignore  README.md  init.sh
install/: local_setup.sh  setup.sh
install/topic_ex_c/lib/topic_ex_c/: topic_pub  topic_sub
install/topic_ex_c/share/topic_ex_c/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
install/turtlebot3_fake_node/share/turtlebot3_fake_node/: package.sh
install/turtlebot3_gazebo/include/turtlebot3_gazebo/: obstacle1.hpp  obstacle2.hpp  obstacles.hpp  traffic_bar_plugin.hpp  traffic_light_plugin.hpp  turtlebot3_drive.hpp
install/turtlebot3_gazebo/lib/turtlebot3_gazebo/: turtlebot3_drive
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_gazebo/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig-version.cmake  (+3 more)
install/turtlebot3_simulations/share/turtlebot3_simulations/: package.sh
install/wanderbot/lib/wanderbot/: go_rot  go_scan
install/wanderbot/share/wanderbot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/followbot/: CMakeLists.txt  package.xml
src/followbot/launch/: course.launch.py
src/followbot/src/: followbot.cpp
src/topic_ex_c/: CMakeLists.txt
src/topic_ex_c/src/: hoho_pub.py  topic_publisher.cpp  topic_subscriber.cpp
src/wanderbot/: CMakeLists.txt
src/wanderbot/src/: go_mission2.cpp  go_rot.cpp  go_scan.cpp
(+121 files in other folders)
